--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -370,8 +370,9 @@ h6,
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0, 0.9);
+  background-color: #fff;
+  // background-color: rgb(f,f,f);
+  // background-color: rgba(0,0,0, 0.9);
   overflow-y: hidden;
   transition: 0.5s;
 }
@@ -388,13 +389,15 @@ h6,
   padding: 8px;
   text-decoration: none;
   font-size: 36px;
-  color: #818181;
+  // color: #818181;
+  color: #000;
   display: block;
   transition: 0.3s;
 }
 
 .overlay a:hover, .overlay a:focus {
-  color: #f1f1f1;
+  // color: #f1f1f1;
+  text-decoration: underline;
 }
 
 .overlay .closebtn {
